--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   },
   "dependencies": {
     "@changesets/cli": "^2.26.2",
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.4",
     "@react-navigation/native": "^6.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "expo": "^52.0.37",
     "expo-font": "~13.0.4",
+    "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
     "expo-screen-orientation": "~8.0.4",
@@ -40,6 +41,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.2",
     "react-native-web": "~0.19.6",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3"
